<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FillParent">

    <LinearLayout style="@style/FillParent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/root_view"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

    <TextView style="@style/CardTitle"
        android:text="@string/recipe_information"/>

        <android.support.v7.widget.CardView style="@style/Card">

        <LinearLayout
            style="@style/FillParent"
            android:background="@color/color_white"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RecipeEditLabel"
                    android:text="@string/recipe_name" />

                <EditText
                    android:id="@+id/recipe_name"
                    style="@style/RecipeEditValue"
                    android:layout_width="fill_parent"
                    android:hint="@string/enter_name"
                    android:gravity="start|bottom"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:maxLength="50">
                    </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RecipeEditLabel"
                    android:text="@string/batch_volume" />

                <EditText
                    android:id="@+id/batch_volume"
                    style="@style/RecipeEditValue"
                    android:hint="@string/volume"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/batch_units"
                    style="@style/RecipeEditUnit"
                    android:text="@string/gallon_abbrev" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RecipeEditLabel"
                    android:text="@string/boil_volume" />

                <EditText
                    android:id="@+id/boil_volume"
                    style="@style/RecipeEditValue"
                    android:hint="@string/volume"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/boil_units"
                    style="@style/RecipeEditUnit"
                    android:text="@string/gallon_abbrev" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RecipeEditLabel"
                    android:text="@string/boil_time" />

                <EditText
                    android:id="@+id/boil_time"
                    style="@style/RecipeEditValue"
                    android:hint="@string/time"
                    android:inputType="number" />

                <TextView
                    style="@style/RecipeEditUnit"
                    android:text="@string/min" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RecipeEditLabel"
                    android:text="@string/efficiency" />

                <EditText
                    android:id="@+id/efficiency"
                    style="@style/RecipeEditValue"
                    android:hint="@string/percent"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/RecipeEditUnit"
                    android:text="%" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RecipeEditLabel"
                    android:text="@string/bjcp_style" />

                <Spinner style="@style/MySpinner"
                    android:id="@+id/recipe_style"
                    android:layout_width="fill_parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/substyle_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RecipeEditLabel"
                    android:text="@string/substyle" />

                <Spinner style="@style/MySpinner"
                    android:id="@+id/recipe_substyle"
                    android:layout_width="fill_parent"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView >

        <LinearLayout style="@style/FillParent"
            android:id="@+id/description_layout"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView style="@style/CardTitle"
                android:text="@string/style_guidelines"/>

            <android.support.v7.widget.CardView style="@style/Card">

                <TextView android:id="@+id/description"
                    android:background="@drawable/touchable"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:minHeight="48dp"
                    android:padding="5dp"
                    android:singleLine="false"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_dark_primary"
                    android:text="@string/description"
                    android:textSize="14sp"/>

            </android.support.v7.widget.CardView >
        </LinearLayout>
    </LinearLayout>
</ScrollView>