<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    style="@style/FillParent">

    <LinearLayout
        style="@style/FillParent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView style="@style/Card">

            <LinearLayout
                android:id="@+id/recipe_stats_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/touchable"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/recipe_stats_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/recipe_icon"
                        android:background="@color/color_primary_light" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/recipe_name"
                            style="@style/CardTitle"
                            android:layout_marginLeft="0dp"
                            android:gravity="top"
                            android:text="@string/recipe_name" />

                        <TextView
                            android:id="@+id/recipe_style"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/style_name"
                            android:textColor="@color/text_dark_secondary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="2dp"
                    android:background="@color/color_gray" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/batch_vol" />

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/boil_vol" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/batch_volume"
                            style="@style/RecipeStatRight"
                            android:text="@string/_5_0_gal" />

                        <TextView
                            android:id="@+id/boil_volume"
                            style="@style/RecipeStatRight"
                            android:text="@string/_5_5_gal" />
                    </LinearLayout>

                    <View
                        android:layout_width="20dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/boil_time" />

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/efficiency" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/boil_time"
                            style="@style/RecipeStatRight"
                            android:text="@string/_60_min" />

                        <TextView
                            android:id="@+id/efficiency"
                            style="@style/RecipeStatRight"
                            android:text="@string/_70" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calculated_stats"
                        android:textColor="@color/text_dark_primary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_dark_primary"
                        android:layout_alignParentRight="true"
                        android:text="@string/style"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="2dp"
                    android:background="@color/color_gray" />

                <LinearLayout
                    style="@style/RecipeGroupLayout"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/FillParent"
                        android:layout_weight="1.4"
                        android:orientation="vertical">

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/og" />

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/ibu" />

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/srm" />

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/fg" />

                        <TextView
                            style="@style/RecipeStat"
                            android:text="@string/abv" />

                        <TextView
                            android:id="@+id/calories_label"
                            style="@style/RecipeStat"
                            android:text="@string/imperial_calories" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/FillParent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1.4"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/recipe_og"
                            style="@style/RecipeStatRight"
                            android:text="0.000" />

                        <TextView
                            android:id="@+id/recipe_ibu"
                            style="@style/RecipeStatRight"
                            android:text="0" />

                        <TextView
                            android:id="@+id/recipe_srm"
                            style="@style/RecipeStatRight"
                            android:text="0" />

                        <TextView
                            android:id="@+id/recipe_fg"
                            style="@style/RecipeStatRight"
                            android:text="0.000" />

                        <TextView
                            android:id="@+id/recipe_abv"
                            style="@style/RecipeStatRight"
                            android:text="99%" />

                        <TextView
                            android:id="@+id/recipe_calories"
                            style="@style/RecipeStatRight"
                            android:text="999" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:background="@color/color_gray" />

                    <LinearLayout
                        style="@style/FillParent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/style_og"
                            style="@style/RecipeStatRight"
                            android:text="1.050 - 1.060" />

                        <TextView
                            android:id="@+id/style_ibu"
                            style="@style/RecipeStatRight"
                            android:text="10 - 20" />

                        <TextView
                            android:id="@+id/style_srm"
                            style="@style/RecipeStatRight"
                            android:text="10 - 20" />

                        <TextView
                            android:id="@+id/style_fg"
                            style="@style/RecipeStatRight"
                            android:text="1.010 - 1.011" />

                        <TextView
                            android:id="@+id/style_abv"
                            style="@style/RecipeStatRight"
                            android:text="1.3 - 2.4%" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/Card">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_height="48dp"
                        android:layout_marginLeft="0dp"
                        android:gravity="center_vertical"
                        android:text="@string/ingredients" />

                    <TextView
                        android:id="@+id/new_ingredient_view"
                        android:layout_width="48dp"
                        android:layout_alignParentRight="true"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:background="@drawable/touchable"
                        android:textColor="@color/text_dark_primary"
                        android:text="@string/add" />

                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/color_gray" />

                <LinearLayout
                    android:id="@+id/ingredient_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

                <TextView
                    android:id="@+id/no_ingredients"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/no_ingredients"
                    android:textColor="@color/text_dark_secondary" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card"
            android:minHeight="48dp">

            <LinearLayout
                android:id="@+id/recipe_notes_layout"
                android:background="@drawable/touchable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CardTitle"
                    android:layout_height="48dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/notes" />

                <View style="@style/HorizontalSeparator" />

                <TextView
                    android:id="@+id/recipe_notes"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:minHeight="48dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:singleLine="false"
                    android:hint="@string/add_recipe_notes"
                    android:textColor="@color/text_dark_primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>